--- a/src/Makefile
+++ b/src/Makefile
@@ -40,7 +40,7 @@ endif
 
 LN=ln
 
-all: include-boost get-regions inalign get-coverage zc move-bins add-extra-sam-flags
+all: include-boost get-regions inalign get-coverage zc add-extra-sam-flags move-bins
 
 include-boost:
 	if [[ ! -e boost && -d "$(BOOST)" ]]; then ln -s "$(BOOST)" boost; fi
@@ -146,7 +146,7 @@ zc: zc.c
 	$(LD) $(CXXFLAGS) -o $@ $+ $(LDFLAGS)
 
 move-bins:
-	mv get-regions inalign get-coverage zc ../bin
+	mv get-regions inalign get-coverage zc add-extra-sam-flags ../bin 
 
 clean:
-	rm -f *.o gzstream/gzstream.o get-regions inalign get-coverage zc boost ../bin/get-regions ../bin/inalign ../bin/get-coverage ../bin/zc
+	rm -f *.o gzstream/gzstream.o get-regions inalign get-coverage zc boost ../bin/get-regions ../bin/inalign ../bin/get-coverage ../bin/zc ../bin/add-extra-sam-flags
